2012-01-17  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Changed the Doc Holyday request to only ask for the cards to
	  discard, the target player is then requested in a ShotTarget
	  request.
	Fixed the AI trying to play Knife (and other green cards) from
	  hand.

2012-01-15  WOnder93  <omosnacek@gmail.com>

	* AIPlayer.cs:
	  Error/diagnostic messages are now printed to stderr.

	* AssemblyInfo.cs:
	  

2012-01-13  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* CardHelper.cs:
	  Decreased the value of card Jail.

2012-01-12  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  AI: Play Dynamite at least when having the ability of Lucky
	  Duke.

2012-01-10  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Many changes & fixes.

2012-01-04  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Oops... forgot to update version in the previous revision.

2012-01-04  WOnder93  <omosnacek@gmail.com>

	* ThreePlayersPlayerHelper.cs:
	  Fixed the definiton of ally in
	  Bang.AI.ThreePlayersPlayerHelper.

	* AIPlayer.cs:
	  Bang.AI.AIPlayer.triedAbility renamed to
	  Bang.AI.AIPlayer.triedAbilities.
	AI players' password set to empty.
	Added region directives for better orientation in the code.
	Some formatting fixes.
	AI players now try to play General Stores as well.

2011-12-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Fixed build failure on MS Visual Studio 2010.

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* Bang# AI.csproj:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Adapt to the changes in the interface.

2011-09-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Adapted to the new interface.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs: